# scraping_app

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
app/: Dockerfile  auth.py  config.py  db.py  find_shop.py  kroger_service.py  main.py  pyproject.toml  scrape.py  scraping_service.py
app/api/: kroger_api_client.py  spoonacular_api_client.py
app/config/: config.py  logger_config.py
app/db/: db_dependencies.py  mongo_db.py
app/handlers/: web_socket_handler.py
app/repositories/: mongo_repository.py
app/routers/: logs_router.py  scrap_router.py
app/scripts/: find_shop.py
app/services/: scrap_service.py
app/tests/: test_kroger_api_client.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx
frontend/src/components/: LogsComponent.tsx  ScraperComponent.tsx
scripts/: update_ingredients.py
static/: logs.html
