[tool.poetry]
name = "kroger-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
requests = "^2.32.3"
pymongo = "^4.11"
python-dotenv = "^1.0.1"
motor = "^3.7.0"
httpx = "^0.27.0"

# heavy dependencies are not needed in docker
[tool.poetry.group.heavy.dependencies]
sentence-transformers = "^3.4.1"
faiss-cpu = "^1.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
